--- a/index.html
+++ b/index.html
@@ -153,28 +153,16 @@ I am committed to contributing to the advancement of both computer science and r
 	<h2 class="main_header"> <a href="#teaching">Teaching Experience </a></h2>
 	<ul class="list-unstyled">
 		<li>
-			<h4 class="sub_header">Lecturer</h4>
+			<h4 class="sub_header">Lecturer, New Summit College </h4>
 			<ul class="sub_list">
-				<li>Spring 2020, BCT Juniors, <b>Artificial Intelligence,</b> Tribhuvan University, Himalaya College of Engineering, Lalitpur, Nepal</li>
-				<li>Spring 2020, BEX Sophomores, <b>Discrete Mathematics,</b> Tribhuvan University, Himalaya College of Engineering, Lalitpur, Nepal</li>
-
+				<li>Instructed three core courses—Cloud Computing, Computer Networking, and Operating Systems—to over 250 undergraduates in Computer Science, achieving a 95% pass rate.</li>
+				<li>Facilitated Hands-on Lab training sessions on platforms like Microsoft Azure, VMware EXSi, AWS, and GCP, aligning with the course module.</li>
+                <li>Coordinated with computer science faculty to prepare and improve lab instructions and assignments.</li>
+                <li>●	Coached an Azure Fundamentals Bootcamp, certifying over 50 students, offering mentorship for their entry into the cloud industry and guiding final-year students on major projects.</li>
 			</ul>
 		</li>
 		<hr>
-		<li>
-			<h4 class="sub_header">Assistant Lecturer</h4>
-			<ul class="sub_list">
-				<li> Fall 2019, B.Sc. CSIT Juniors, <b>Artificial Intelligence,</b> Tribhuvan University, Himalaya College of Engineering, Lalitpur, Nepal</li>
-				<li> Fall 2019, BCE Freshmen, <b>Computer Programming,</b> Tribhuvan University, Himalaya College of Engineering, Lalitpur, Nepal</li>
-				<li> Fall 2019, BCE Freshmen, <b>Computer Programming,</b> Tribhuvan University, Janakpur Engineering College, Lalitpur, Nepal</li>
-				<li>Spring 2019, BCT Juniors, <b>Artificial Intelligence,</b> Tribhuvan University, Himalaya College of Engineering, Lalitpur, Nepal</li>
-				<li>Spring 2019, BEX Sophomores, <b>Discrete Mathematics,</b> Tribhuvan University, Himalaya College of Engineering, Lalitpur, Nepal</li>
-				<li> Fall 2018, BCE Freshmen, <b>Computer Programming,</b> Tribhuvan University, Himalaya College of Engineering, Lalitpur, Nepal</li>
-				<li>Spring 2018, BEX Sophomores, <b>Discrete Mathematics,</b> Tribhuvan University, Himalaya College of Engineering, Lalitpur, Nepal</li>
-				<li>Spring 2018, BCT Sophomores, <b>Numerical Methods,</b> Tribhuvan University, Himalaya College of Engineering, Lalitpur, Nepal</li>
-			</ul>
-			
-		</li>
+		
 		<hr>
 		<li>
 			<h4 class="sub_header">Instructor / Co-founder</h4>
